Send data to grafana graphite

--- a/laser/credentials.h.TEMPLATE
+++ b/laser/credentials.h.TEMPLATE
@@ -1,2 +1,7 @@
-#define PASSWORD "<YourPassword>"
+#define WIFI_PASSWORD "<YourPassword>"
 #define WIFI_SSID "<YourSSID>"
+
+// grafana/graphite config
+#define GRAPHITE_USER "12345"
+#define GRAPHITE_API_KEY "sdhakdfhdasjkfhkasjhfkasj" // graphite API key goes here
+
